--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,34 @@
+# Dependencies
 node_modules
+
+# Build output
+dist
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Session files (sensitive)
+*.session
+session.txt
+
+# Progress files
+migration-progress.json
+
+# Logs
+*.log
+logs/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Coverage
+coverage/
