feat: update env example

--- a/.env.example
+++ b/.env.example
@@ -3,18 +3,22 @@
 TG_API_ID=
 TG_API_HASH=
 
-# Account A Session File Path
-TG_SESSION_PATH_A=./session-a.txt
+# Account A Phone Number (required)
+TG_PHONE_A=
 
 # Target Account B (username or phone number)
-TG_TARGET_ACCOUNT_B=
+TG_TARGET_USER_B=
+
+# Session File Path
+TG_SESSION_PATH=./session-a.txt
 
 # Migration Settings
 TG_BATCH_SIZE=100
-TG_GROUP_NAME_PREFIX=[Migrated]
-TG_FLOOD_SLEEP_THRESHOLD=300
+TG_BATCH_DELAY=1000
+TG_GROUP_PREFIX=[Migrated]
+TG_FLOOD_WAIT_THRESHOLD=300
 
 # Progress and Logging
 TG_PROGRESS_PATH=./migration-progress.json
-TG_LOG_PATH=./migration.log
+TG_LOG_FILE=./migration.log
 TG_LOG_LEVEL=info
