feat: exclude dialog

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,8 @@ TG_FLOOD_WAIT_THRESHOLD=300
 TG_PROGRESS_PATH=./migration-progress.json
 TG_LOG_FILE=./migration.log
 TG_LOG_LEVEL=info
+
+# Dialog Filters (comma-separated)
+# Available types: private, group, supergroup, channel, bot
+# TG_EXCLUDE_TYPES=bot,channel
+# TG_INCLUDE_TYPES=private,group
